<resources>
    <string name="app_name">MENU</string>
    <string name="_2048_the_game">2048 the game</string>
    <string name="mover_setas">Mover Setas</string>
    <string name="mover_com_voz">Mover com Voz</string>
    <string name="sair">Sair</string>
    <string name="mover_c_obejto">Mover c/ Obejto</string>
    <string name="button">Button</string>
    <string name="reiniciar">Reiniciar</string>

    <string name="voltar">Voltar</string>
</resources>
